// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNav/> render with default/required props 1`] = `
<DocumentFragment>
  <nav
    class="topnav "
    data-cy="-topnav"
  >
    <a
      class="topnav__link"
      href="/"
    >
      <img
        alt="Logo"
        class="topnav__logo--main"
        data-cy="-topnav-logo"
        src="/assets/img/1.png"
      />
    </a>
    <img
      alt="UK postcode areas"
      class=" topnav__item"
      data-cy="topnav-postcode_tree--drawer--open"
      src="/assets/img/united-kingdom.svg"
    />
    <a
      class="topnav__link--github"
      href="//github.com/anna-liepina/explore-cwa-react"
      target="_blank"
    >
      <img
        alt="GitHub logo"
        class="topnav__logo--github"
        data-cy="-topnav-github"
        src="/assets/img/github-logo.png"
      />
    </a>
  </nav>
</DocumentFragment>
`;

exports[`<TopNav/> render with optional/required props 1`] = `
<DocumentFragment>
  <nav
    class="topnav optProps.className"
    data-cy="optProps.data-cy-topnav"
  >
    <a
      class="topnav__link"
      href="/"
    >
      <img
        alt="Logo"
        class="topnav__logo--main"
        data-cy="optProps.data-cy-topnav-logo"
        src="/assets/img/1.png"
      />
    </a>
    <img
      alt="UK postcode areas"
      class=" topnav__item"
      data-cy="topnav-postcode_tree--drawer--open"
      src="/assets/img/united-kingdom.svg"
    />
    <a
      class="topnav__link--github"
      href="//github.com/anna-liepina/explore-cwa-react"
      target="_blank"
    >
      <img
        alt="GitHub logo"
        class="topnav__logo--github"
        data-cy="optProps.data-cy-topnav-github"
        src="/assets/img/github-logo.png"
      />
    </a>
  </nav>
</DocumentFragment>
`;
